fix refresh button text wrap

--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -80,6 +80,7 @@
 }
 
 .btn-like{
+  white-space: nowrap;
   @extend .unselectable;
   cursor: pointer;
   &:active{
